--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,13 @@ textarea {
 #sendUnitsBtn {
     margin-top: 10px;
 }
+
+.checkbox {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.checkbox input[type="checkbox"] {
+    margin-right: 10px;
+}
